# formi-assignment

./: .replit  README.md  app.py  config.py  models.py  pyproject.toml  routes.py
api/: booking_service.py  conversation_service.py  knowledge_base.py  post_call_analysis.py  state_machine.py
attached_assets/: Pasted--Overview-Create-a-conversation-logging-system-integrated-with-Google-Sheets-post-each-call-chatb-1747063714813.txt  Pasted--Purpose-The-primary-purpose-is-the-implementation-and-delivery-of-the-inbound-enquiry-and-book-1747071752683.txt  Pasted--STEP-1-Fork-the-GitHub-Template-URL-to-fork-https-github-com-AryamannNingombam-agentops-tem-1747069965980.txt  Pasted-Knowledge-Base-Overview-NOTE-Please-note-that-the-tools-platforms-that-you-would-be-using-for-this-1747063570020.txt
data/: bbq_knowledge_base.py
static/css/: styles.css
static/js/: chat.js
templates/: booking.html  chatbot.html  index.html  manage-booking.html
utils/: helpers.py  token_management.py
