[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=5.0.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gspread>=6.2.0",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "oauth2client>=4.1.3",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "tiktoken>=0.9.0",
    "openai>=1.78.1",
]
